--- a/css/style.css
+++ b/css/style.css
@@ -66,19 +66,38 @@ main {
 }
 
 
-
 aside {
     margin-top: 25px;
     border: 4px solid lightgrey;
     padding: 10px;
     
+    
+}
+
+.hero-cta-button {
+    display: flex; 
+    justify-content: center;
 }
 
 
-
-
-
 section {
-    text-align: center;
+    align-content: center;
     margin-top: 25px;
+    max-width: 100%;
+    
+}
+
+.hero-image {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    
+}
+
+img {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-wrap: row wrap;
+    border: 4px solid black;
 }
