--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav {
     
 }
 
-main {
+#hero {
     display: grid;
     background-color: beige;
     font-family: sans-serif;
@@ -100,4 +100,36 @@ img {
     height: 100%;
     flex-wrap: row wrap;
     border: 4px solid black;
+}
+
+h3 {
+    text-align: center;
+}
+
+#social {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    border: 4px ridge grey;
+}
+
+.social-header {
+    display: flex;
+    justify-content: center;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+}
+
+.social-links ul {
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+    margin-bottom: 35px;
+    
 }
